# linguistic

./: mkdocs.yml  pyproject.toml
linguistic/: Checagem.py  TelaCinco.py  TelaDois.py  TelaPrincipal.py  TelaQuatro.py  TelaTres.py  __main__.py  main.py  tela_analise_linguistica.py  tela_cod_social.py  tela_filtragem.py  tela_insere_cod.py  tela_opcoes.py  tela_tres.py
saidas/análises/: estatística planilha linguística.txt
saidas/planilhas/: planilha_com_cod_soc.xlsx
tests/planilhas/: 4mpriv.xlsx  Formulário de informantes.xlsx  informante 1.xlsx  planilha_com_cod_soc.xlsx  tabela_linguistica_com_cod_soc.xlsx
