[tool.poetry]
name = "linguistic"
version = "0.1.0"
description = ""
authors = ["Ian Alves <ian.santos.alves@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
PySimpleGUI = "^4.60.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
mkdocs = "^1.3.1"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
